--- a/trunk/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/inventarios/crearLineaDeProducto.xhtml
+++ b/trunk/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/inventarios/crearLineaDeProducto.xhtml
@@ -11,36 +11,31 @@
             <h:head />
             <h:body>
                 <h:form id="form">
-                    <p:dialog widgetVar="statusDialog" modal="true" draggable="false" closable="false" resizable="false" showHeader="false">
+<!--                    <p:dialog widgetVar="statusDialog" modal="true" draggable="false" closable="false" resizable="false" showHeader="false">
                         <p:graphicImage library="images" name="ajax_loader.gif" />
-                    </p:dialog>
+                    </p:dialog>-->
                     <p:panel id="ingresoLineaProducto">
                         <f:facet name="header">
                             <h:outputText value="Creación de Nueva Linea de Producto"></h:outputText>
                         </f:facet>
-                        <p:panelGrid columns="3" columnClasses="label,value">
+                        <p:panelGrid columns="2" columnClasses="label,value">
                             <p:outputLabel for="fabricante" value="Fabricante: "></p:outputLabel>
-                            <p:selectOneMenu id="fabricante" required="true" requiredMessage="* Requerido" value="#{crearLineaDeProductoBean.fabricanteSeleccionado}" converter="#{fabricanteConverter}">
+                            <p:selectOneMenu id="fabricante" required="true"  value="#{crearLineaDeProductoBean.fabricanteSeleccionado}" converter="#{fabricanteConverter}">
                                 <f:selectItem itemLabel="#{myBundle.SelectOneMessage}" itemValue=""></f:selectItem>
                                 <f:selectItems value="#{crearLineaDeProductoBean.fabricantes}" var="fabricante" itemLabel="#{fabricante.nombre}" itemValue="#{fabricante.id.toString()}"></f:selectItems>
                                 <p:ajax update="categoria" onstart="statusDialog.show()" onsuccess="statusDialog.hide()"></p:ajax>
                             </p:selectOneMenu>
-                            <p:message for="fabricante"></p:message>
                             <p:outputLabel for="categoria" value="Categoría: "></p:outputLabel>
-                            <p:selectOneMenu id="categoria" required="true" requiredMessage="* Requerido" value="#{crearLineaDeProductoBean.categoriaSeleccionada}" converter="#{categoriaConverter}">
+                            <p:selectOneMenu id="categoria" required="true"  value="#{crearLineaDeProductoBean.categoriaSeleccionada}" converter="#{categoriaConverter}">
                                 <f:selectItem itemLabel="#{myBundle.SelectOneMessage}" itemValue=""></f:selectItem>
                                 <f:selectItems value="#{crearLineaDeProductoBean.fabricanteSeleccionado.categoriaProductoList}" var="categoria" itemLabel="#{categoria.nombre}" itemValue="#{categoria.id.toString()}"></f:selectItems>
                             </p:selectOneMenu>
-                            <p:message for="categoria"></p:message>
                             <p:outputLabel for="nombre" value="Nombre: "></p:outputLabel>
-                            <p:inputText id="nombre" value="#{crearLineaDeProductoBean.nuevaLineaDeProducto.nombre}" required="true" requiredMessage="* Requerido"></p:inputText>
-                            <p:message for="nombre"></p:message>
+                            <p:inputText id="nombre" value="#{crearLineaDeProductoBean.nuevaLineaDeProducto.nombre}" required="true" ></p:inputText>
                             <p:outputLabel for="referencia" value="N. Referencia: "></p:outputLabel>
                             <p:inputText id="referencia" value="#{crearLineaDeProductoBean.nuevaLineaDeProducto.numeroDeReferencia}"></p:inputText>
-                            <p:message for="referencia"></p:message>
                             <p:outputLabel for="descripcion" value="Descripción: "></p:outputLabel>
                             <p:inputText id="descripcion" value="#{crearLineaDeProductoBean.nuevaLineaDeProducto.descripcion}"></p:inputText>
-                            <p:message for="descripcion"></p:message>
                         </p:panelGrid>
                         <f:facet name="footer">
                             <p:commandButton value="Crear Línea de Producto" actionListener="#{crearLineaDeProductoBean.ingresarNuevaLineaDeProducto}" update="@form" onstart="statusDialog.show()" onsuccess="statusDialog.hide()"></p:commandButton>
