--- a/trunk/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/inventarios/ingresarProductoPiezaNA.xhtml
+++ b/trunk/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/inventarios/ingresarProductoPiezaNA.xhtml
@@ -13,54 +13,48 @@
             <h:head />
             <h:body>
                 <h:form id="form">
-                    <p:dialog widgetVar="statusDialog" modal="true" draggable="false" closable="false" resizable="false" showHeader="false">
+<!--                    <p:dialog widgetVar="statusDialog" modal="true" draggable="false" closable="false" resizable="false" showHeader="false">
                         <p:graphicImage library="images" name="ajax_loader.gif" />
-                    </p:dialog>
+                    </p:dialog>-->
                     <p:panel id="ingresoProducto">
                         <f:facet name="header">
                             <h:outputText value="Nuevo Producto/Componente no atómico"></h:outputText>
                         </f:facet>
-                        <p:panelGrid columns="3" columnClasses="label,value">
+                        <p:panelGrid columns="2" columnClasses="label,value">
                             <p:outputLabel for="fabricante" value="Fabricante: "></p:outputLabel>
-                            <p:selectOneMenu id="fabricante" required="true" requiredMessage="* Requerido" value="#{ingresarProductoPiezaNA.fabricanteSeleccionado}" converter="#{fabricanteConverter}">
+                            <p:selectOneMenu id="fabricante" required="true" value="#{ingresarProductoPiezaNA.fabricanteSeleccionado}" converter="#{fabricanteConverter}">
                                 <f:selectItem itemLabel="#{myBundle.SelectOneMessage}" itemValue=""></f:selectItem>
                                 <f:selectItems value="#{ingresarProductoPiezaNA.fabricantes}" var="fabricante" itemLabel="#{fabricante.nombre}" itemValue="#{fabricante.id.toString()}"></f:selectItems>
                                 <p:ajax listener="#{ingresarProductoPiezaNA.actualizarCategorias()}" update="categoria, lineaP, modelo, productoPadre, compatible, :form:productoNuevo" onstart="statusDialog.show()" onsuccess="statusDialog.hide()"></p:ajax>
                             </p:selectOneMenu>
-                            <p:message for="fabricante"></p:message>
                             <p:outputLabel for="categoria" value="Categoría: "></p:outputLabel>
-                            <p:selectOneMenu id="categoria" required="true" requiredMessage="* Requerido" value="#{ingresarProductoPiezaNA.categoriaProductoSeleccionada}" converter="#{categoriaConverter}">
+                            <p:selectOneMenu id="categoria" required="true" value="#{ingresarProductoPiezaNA.categoriaProductoSeleccionada}" converter="#{categoriaConverter}">
                                 <f:selectItem itemLabel="#{myBundle.SelectOneMessage}" itemValue=""></f:selectItem>
                                 <f:selectItems value="#{ingresarProductoPiezaNA.fabricanteSeleccionado.categoriaProductoList}" var="categoria" itemLabel="#{categoria.nombre}" itemValue="#{categoria.id.toString()}"></f:selectItems>
                                 <p:ajax listener="#{ingresarProductoPiezaNA.actualizarLineaDeProducto()}" update="lineaP, modelo, productoPadre, compatible, :form:productoNuevo" onstart="statusDialog.show()" onsuccess="statusDialog.hide()"></p:ajax>
                             </p:selectOneMenu>
-                            <p:message for="categoria"></p:message>
                             <p:outputLabel for="lineaP" value="Linea de Producto: "></p:outputLabel>
-                            <p:selectOneMenu id="lineaP" required="true" requiredMessage="* Requerido" value="#{ingresarProductoPiezaNA.lineaDeProductoSeleccionada}" converter="#{lineaProductoConverter}">
+                            <p:selectOneMenu id="lineaP" required="true" value="#{ingresarProductoPiezaNA.lineaDeProductoSeleccionada}" converter="#{lineaProductoConverter}">
                                 <f:selectItem itemLabel="#{myBundle.SelectOneMessage}" itemValue=""></f:selectItem>
                                 <f:selectItems value="#{ingresarProductoPiezaNA.lineaDeProductos}" var="linea" itemLabel="#{linea.nombre}" itemValue="#{linea.id.toString()}"></f:selectItems>
                                 <p:ajax update="modelo, productoPadre, :form:productoNuevo" onstart="statusDialog.show()" onsuccess="statusDialog.hide()"></p:ajax>
                             </p:selectOneMenu>
-                            <p:message for="lineaP"></p:message>
                             <p:outputLabel for="modelo" value="Modelo: "></p:outputLabel>
-                            <p:selectOneMenu id="modelo" required="true" requiredMessage="* Requerido" value="#{ingresarProductoPiezaNA.modeloProductoSeleccionado}" converter="#{modeloConverter}">
+                            <p:selectOneMenu id="modelo" required="true" value="#{ingresarProductoPiezaNA.modeloProductoSeleccionado}" converter="#{modeloConverter}">
                                 <f:selectItem itemLabel="#{myBundle.SelectOneMessage}" itemValue=""></f:selectItem>
                                 <f:selectItems value="#{ingresarProductoPiezaNA.lineaDeProductoSeleccionada.modeloProductoList}" var="modelo" itemLabel="#{modelo.modelo}" itemValue="#{modelo.id.toString()}"></f:selectItems>
                                 <p:ajax listener="#{ingresarProductoPiezaNA.actualizarProductoPadre()}" update="productoPadre, :form:productoNuevo" onstart="statusDialog.show()" onsuccess="statusDialog.hide()"></p:ajax>
                             </p:selectOneMenu>
-                            <p:message for="modelo"></p:message>
                             <p:outputLabel for="productoPadre" value="Producto Padre: "></p:outputLabel>
                             <p:selectOneMenu id="productoPadre" value="#{ingresarProductoPiezaNA.productoPadreSeleccionado}" converter="#{itemProductoConverter}" filter="true" filterMatchMode="contains" >
                                 <f:selectItem itemLabel="#{myBundle.SelectOneMessage}" itemValue=""></f:selectItem>
                                 <f:selectItems value="#{ingresarProductoPiezaNA.productosPadre}" var="padre" itemLabel="#{padre.descripcion}, SN: #{padre.numeroSerial}" itemValue="#{padre.numeroSerial}"></f:selectItems>
                                 <p:ajax update=":form:contrato, :form:bodega, :form:fechaCompra, :form:numFactura, :form:numPedido" listener="#{ingresarProductoPiezaNA.actualizarContratoYBodega()}" onstart="statusDialog.show()" onsuccess="statusDialog.hide()"></p:ajax>
                             </p:selectOneMenu>
-                            <p:message for="productoPadre"></p:message>
                             <p:outputLabel for="compatible" value="Productos Compatibles"></p:outputLabel>
                             <p:selectManyMenu id="compatible" style="width: 100%;" value="#{ingresarProductoPiezaNA.modelosCompatiblesSeleccionados}" converter="#{modeloConverter}" showCheckbox="true">
                                 <f:selectItems value="#{ingresarProductoPiezaNA.modeloProductosCompatibles}" var="modeloC" itemLabel="#{modeloC.lineaDeProductoid.nombre} - #{modeloC.modelo}" itemValue="#{modeloC.id.toString()}"></f:selectItems>
                             </p:selectManyMenu>
-                            <p:message for="compatible"></p:message>
                         </p:panelGrid>
                     </p:panel>
                     <p:panel id="productoNuevo" >
@@ -80,7 +74,7 @@
                             <ui:repeat value="#{ingresarProductoPiezaNA.seriales}" var="sn" varStatus="i">
                                 <p:panelGrid columns="3">
                                     <p:outputLabel for="seriales" value="Serial #{i.index + 1}"></p:outputLabel>
-                                    <p:inputText id="seriales" value="#{ingresarProductoPiezaNA.seriales[i.index]}" required="true" requiredMessage="* Requerido">
+                                    <p:inputText id="seriales" value="#{ingresarProductoPiezaNA.seriales[i.index]}" required="true" >
                                         <f:ajax event="keyup" execute="@this" render="alertaSN"></f:ajax>
                                         <f:validator binding="#{numeroSerialValidator}"></f:validator>
                                     </p:inputText>
@@ -88,53 +82,61 @@
                                 </p:panelGrid>
                             </ui:repeat>
                         </p:panelGrid>
-                        <p:panelGrid rendered="#{ingresarProductoPiezaNA.modeloProductoSeleccionado != null}" columns="3" id="atributosItemP">
+                        <p:panelGrid rendered="#{ingresarProductoPiezaNA.modeloProductoSeleccionado != null}" columns="2" id="atributosItemP">
                             <f:facet name="header">
                                 <h:outputText value="Atributos de Producto"></h:outputText>
                             </f:facet>
                             <p:outputLabel for="descripcion" value="Descripción: "></p:outputLabel>
-                            <p:inputText id="descripcion" value="#{ingresarProductoPiezaNA.nuevoProducto.descripcion}" required="true" requiredMessage="* Requerido"></p:inputText>
-                            <p:message for="descripcion"></p:message>
+                            <p:inputText id="descripcion" value="#{ingresarProductoPiezaNA.nuevoProducto.descripcion}" required="true" ></p:inputText>
                             <p:outputLabel for="condicion" value="Condición Física: "></p:outputLabel>
-                            <p:selectOneMenu id="condicion" value="#{ingresarProductoPiezaNA.nuevoProducto.condicionFisicaid}" required="true" requiredMessage="* Requerido" converter="#{condicionFisicaConverter}">
+                            <p:selectOneMenu id="condicion" value="#{ingresarProductoPiezaNA.nuevoProducto.condicionFisicaid}" required="true"  converter="#{condicionFisicaConverter}">
                                 <f:selectItem itemLabel="#{myBundle.SelectOneMessage}" itemValue=""></f:selectItem>
                                 <f:selectItems value="#{ingresarProductoPiezaNA.condicionesFisicas}" var="condicionF" itemLabel="#{condicionF.nombre}" itemValue="#{condicionF.id.toString()}"></f:selectItems>
                                 <p:ajax listener="#{ingresarProductoPiezaNA.actualizarCamposPorProductoDanado()}" update="fechaCompra, numFactura, numPedido"></p:ajax>
                             </p:selectOneMenu>
-                            <p:message for="condicion"></p:message>
                             <p:outputLabel for="esSistema" value="Es sistema: "></p:outputLabel>
-                            <p:selectOneRadio id="esSistema" value="#{ingresarProductoPiezaNA.esSistema}" required="true" requiredMessage="* Requerido">
+                            <p:selectOneRadio id="esSistema" value="#{ingresarProductoPiezaNA.esSistema}" required="true" >
                                 <f:selectItem itemLabel="Si" itemValue="true"></f:selectItem>
                                 <f:selectItem itemLabel="No" itemValue="false"></f:selectItem>
                                 <p:ajax listener="#{ingresarProductoPiezaNA.actualizarNumeroParte()}" update="numeroParte" onstart="statusDialog.show()" onsuccess="statusDialog.hide()"></p:ajax>
                             </p:selectOneRadio>
-                            <p:message for="esSistema"></p:message>
                             <p:outputLabel for="numeroParte" value="N/P: "></p:outputLabel>
-                            <p:inputText id="numeroParte" disabled="#{ingresarProductoPiezaNA.esSistema}" value="#{ingresarProductoPiezaNA.nuevoProducto.numeroDeParte}" required="true" requiredMessage="* Requerido"></p:inputText>
-                            <p:message for="numeroParte"></p:message>
+                            <p:inputText id="numeroParte" disabled="#{ingresarProductoPiezaNA.esSistema}" value="#{ingresarProductoPiezaNA.nuevoProducto.numeroDeParte}" required="true" ></p:inputText>
                             <p:outputLabel for="bodega" value="Bodega: "></p:outputLabel>
                             <p:selectOneMenu id="bodega" value="#{ingresarProductoPiezaNA.nuevoProducto.bodegaid}" converter="#{bodegaConverter}">
                                 <f:selectItem itemLabel="#{myBundle.SelectOneMessage}" itemValue=""></f:selectItem>
                                 <f:selectItems value="#{ingresarProductoPiezaNA.bodegas}" var="bodega" itemLabel="#{bodega.nombre}" itemValue="#{bodega.id.toString()}"></f:selectItems>
                                 <p:ajax listener="#{ingresarProductoPiezaNA.desactivarContrato()}" update="contrato, :form:productoPadre" onstart="statusDialog.show()" onsuccess="statusDialog.hide()"></p:ajax>
                             </p:selectOneMenu>
-                            <p:message for="bodega"></p:message>
                             <p:outputLabel for="contrato" value="Contrato: "></p:outputLabel>
                             <p:selectOneMenu id="contrato" value="#{ingresarProductoPiezaNA.nuevoProducto.contratonumero}" converter="#{contratoConverter}" filter="true" filterMatchMode="contains">
                                 <f:selectItem itemLabel="#{myBundle.SelectOneMessage}" itemValue=""></f:selectItem>
-                                <f:selectItems value="#{ingresarProductoPiezaNA.contratos}" var="contrato" itemLabel="#{contrato.clienteEmpresaruc.nombreComercial} - #{contrato.numero}" itemValue="#{contrato.numero}"></f:selectItems>
+                                <f:selectItems value="#{ingresarProductoPiezaNA.contratos}" var="contrato" itemLabel="#{contrato.clienteEmpresaid.nombreComercial} - #{contrato.numero}" itemValue="#{contrato.numero}"></f:selectItems>
                                 <p:ajax listener="#{ingresarProductoPiezaNA.desactivarBodega()}" update="bodega" onstart="statusDialog.show()" onsuccess="statusDialog.hide()"></p:ajax>
                             </p:selectOneMenu>
-                            <p:message for="contrato"></p:message>
                             <p:outputLabel for="fechaCompra" value="Fecha de Compra: "></p:outputLabel>
-                            <p:calendar id="fechaCompra" pattern="MM/dd/yyyy" mode="popup" value="#{ingresarProductoPiezaNA.nuevoProducto.fechaDeCompra}" disabled="#{ingresarProductoPiezaNA.esProductoDanado}" required="true" requiredMessage="* Requerido"></p:calendar>
-                            <p:message for="fechaCompra"></p:message>
+                            <p:calendar id="fechaCompra" pattern="MM/dd/yyyy" mode="popup" value="#{ingresarProductoPiezaNA.nuevoProducto.fechaDeCompra}" disabled="#{ingresarProductoPiezaNA.esProductoDanado}" required="true" ></p:calendar>
                             <p:outputLabel for="numFactura" value="N. Factura: "></p:outputLabel>
-                            <p:inputText id="numFactura" value="#{ingresarProductoPiezaNA.nuevoProducto.numeroDeFactura}" disabled="#{ingresarProductoPiezaNA.esProductoDanado}" required="true" requiredMessage="* Requerido"></p:inputText>
-                            <p:message for="numFactura"></p:message>
+                            <p:inputText id="numFactura" value="#{ingresarProductoPiezaNA.nuevoProducto.numeroDeFactura}" disabled="#{ingresarProductoPiezaNA.esProductoDanado}" required="true" ></p:inputText>
                             <p:outputLabel for="numPedido" value="N. Pedido: "></p:outputLabel>
-                            <p:inputText id="numPedido" value="#{ingresarProductoPiezaNA.nuevoProducto.numeroDePedido}" disabled="#{ingresarProductoPiezaNA.esProductoDanado}" required="true" requiredMessage="* Requerido"></p:inputText>
-                            <p:message for="numPedido"></p:message>
+                            <p:inputText id="numPedido" value="#{ingresarProductoPiezaNA.nuevoProducto.numeroDePedido}" disabled="#{ingresarProductoPiezaNA.esProductoDanado}" required="true" ></p:inputText>
+                            <p:outputLabel for="fechaIngresoABodega" value="Fecha de Ingreso A Bodega: "></p:outputLabel>
+                            <p:calendar id="fechaIngresoABodega" pattern="MM/dd/yyyy" mode="popup" value="#{ingresarProductoPiezaNA.nuevoProducto.fechaIngresoABodega}"></p:calendar>
+                            <p:outputLabel for="fobUnitario" value="FOB Unitario: "></p:outputLabel>
+                            <p:inputText id="fobUnitario" value="#{ingresarProductoPiezaNA.nuevoProducto.fobUnitario}">
+                                <f:validateDoubleRange minimum="0.00" maximum="9999999999.99"/>
+                                <o:validator validatorId="decimalesValidator"></o:validator>
+                            </p:inputText>
+                            <p:outputLabel for="indice" value="Índice: "></p:outputLabel>
+                            <p:inputText id="indice" value="#{ingresarProductoPiezaNA.nuevoProducto.indice}">
+                                <f:validateDoubleRange minimum="0.00" maximum="999.99"/>
+                                <o:validator validatorId="decimalesValidator"></o:validator>
+                            </p:inputText>
+                            <p:outputLabel for="costeo" value="Costeo: "></p:outputLabel>
+                            <p:inputText id="costeo" value="#{ingresarProductoPiezaNA.nuevoProducto.costeo}">
+                                <f:validateDoubleRange minimum="0.00" maximum="9999999999.99"/>
+                                <o:validator validatorId="decimalesValidator"></o:validator>
+                            </p:inputText>
                         </p:panelGrid>
                         <f:facet name="footer">
                             <p:commandButton rendered="#{ingresarProductoPiezaNA.modeloProductoSeleccionado != null}" id="ingresar1" value="Ingresar Producto" actionListener="#{ingresarProductoPiezaNA.ingresarProducto}" update="@form" onstart="statusDialog.show()" onsuccess="statusDialog.hide()"></p:commandButton>
