--- a/trunk/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/menu/menu.xhtml
+++ b/trunk/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/menu/menu.xhtml
@@ -101,6 +101,13 @@
                     </p:submenu>
                 </p:column>
             </p:submenu>
+            <p:submenu label="Mi Perfil">
+                <p:column>
+                    <p:submenu label="Edición">
+                        <p:menuitem value="Datos Personales" url="/publico/EdicionDatosPersonales.xhtml"></p:menuitem>
+                    </p:submenu>
+                </p:column>
+            </p:submenu>
         </p:megaMenu>
     </h:form>
 </ui:composition>
