--- a/trunk/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/soporte/misTicketsPorColasv2.xhtml
+++ b/trunk/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/soporte/misTicketsPorColasv2.xhtml
@@ -13,9 +13,9 @@
     <ui:define name="content">
         <f:view contentType="text/html">
             <h:form id="form">
-                <p:dialog widgetVar="statusDialog" modal="true" draggable="false" closable="false" resizable="false" showHeader="false">
+<!--                <p:dialog widgetVar="statusDialog" modal="true" draggable="false" closable="false" resizable="false" showHeader="false">
                     <p:graphicImage library="images" name="ajax_loader.gif" />
-                </p:dialog>
+                </p:dialog>-->
                 <f:facet name="header">
                     Mis Tickets Por Colas
                 </f:facet>                
